--- a/src/components/navbar/Styles.scss
+++ b/src/components/navbar/Styles.scss
@@ -1,3 +1,6 @@
+@import '../../styles/utils/breakpoints';
+
+
 #navbarContainer{
   height: 50px;
   background: black;
@@ -6,11 +9,15 @@
 #navbarContent{
   max-width: 800px;
   margin: 0 auto;
+  @media only screen and (max-width: $mobile) {
+    text-align: center;
+  }
 }
 
-@media (max-width: 500px) {
+@media (max-width: $tablet) {
   #navbarContainer{
     margin-bottom: 15px;
+    justify-content: center;
   }
 }
 
